<resources>
    <string name="app_name">My Menu Book</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="label_login_with_fb">Login with facebook</string>
    <string name="label_login_with_gplus">Login with Google+</string>
    <string name="label_submit">Submit</string>
    <string name="label_signin">Sign in</string>
    <string name="label_signup">Sign up</string>
    <string name="label_or">or</string>
    <string name="label_forgot_password">Forgot password</string>
    <string name="label_ice_commmerce">icecommerce</string>

    <string name="hint_name">What should we call you?</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Password Again</string>
    <string name="label_register">Register</string>
    <string name="invalid_email">Invalid Email</string>

    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="connect">Connect</string>

    <string name="label_login">Login</string>
    <string name="regis_fail">Failed to regis</string>
    <string name="regis_success">Registration Success</string>
    <string name="sign_in_fail">Sign In Fail</string>
    <string name="sign_in_success">Sign In Success</string>

    <string name="facebook_app_id">953031854824486</string>
    <string name="fb_login_protocol_scheme">fb953031854824486</string>
    <string name="sign_up_fail">Sign Up Fail</string>
    <string name="sign_up_success">Sign Up Success</string>
    <string name="app_name_description">Bookmark Your Menu!</string>

    <string name="resto_name">Resto Name</string>
    <string name="resto_menu">Menu</string>
    <string name="resto_description">Description</string>

    <string name="label_take_picture">Take Picture</string>
    <string name="label_new_menu">New Menu</string>
</resources>
