<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <android.support.design.widget.TextInputLayout
        android:theme="@style/BaseTextInputLayout.Grey"
        style="@style/TextInputLayoutWithMargin"
        android:layout_marginTop="@dimen/margin_medium"
        android:hint="@string/resto_menu">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_resto_menu"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:theme="@style/BaseTextInputLayout.Grey"
        style="@style/TextInputLayoutWithMargin"
        android:layout_marginTop="@dimen/margin_medium"
        android:hint="@string/resto_description">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_resto_description"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_take_picture"
        style="@style/BaseButton.Small"
        android:layout_width="match_parent"
        android:text="@string/label_take_picture"
        android:layout_gravity="center_horizontal"/>

    <android.support.v7.widget.AppCompatRatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:numStars="5"/>

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/iv_menu"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_submit"
        style="@style/BaseButton.Small"
        android:text="@string/label_submit"
        android:layout_marginTop="@dimen/component_margin_huge"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>