<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/picton_blue">

        <include layout="@layout/ice_header"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:theme="@style/BaseTextInputLayout"
            style="@style/TextInputLayoutWithMargin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:hint="@string/hint_email"
                android:selectAllOnFocus="true"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:theme="@style/BaseTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="?colorControlNormal"
            style="@style/TextInputLayoutWithMargin">

            <com.icehousecorp.icecommerce.component.PasswordEntry
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_signin"
            style="@style/BaseButton"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/label_signin"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginBottom="28dp"
            android:textColor="@android:color/white"
            android:text="@string/label_forgot_password"/>

        <include layout="@layout/or_separator"/>

        <Button
            android:id="@+id/btn_facebook"
            style="@style/BaseButton.Facebook"
            android:layout_margin="18dp"/>

        <Button android:id="@+id/btn_gplus"
            style="@style/BaseButton.GPlus"
            android:layout_margin="18dp"/>
    </LinearLayout>
</ScrollView>
